Changes to README to better explain Option types